<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ReviewActivity"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/mail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/how_long_you_know_use_this_product"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#E0EBE0"
        android:padding="@dimen/_8sdp">

        <include
            android:id="@+id/subjectBox"
            layout="@layout/editbox_form_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/do_you_purchase_this_product_in_future"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#E0EBE0"
        android:padding="@dimen/_8sdp">

        <include
            android:id="@+id/subjectBox1"
            layout="@layout/editbox_form_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/comment"
        android:textColor="@color/purple_700"
        android:textSize="14sp"
         />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
            android:background="#E2EAE2"
            android:padding="@dimen/_8sdp">

            <include
                android:id="@+id/contentBox"
                layout="@layout/editbox_form_design"
                android:layout_width="match_parent"
                android:layout_height="120dp" />
        </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/purple_700"
        android:padding="7dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/common_button_size_20"
        app:cornerRadius="@dimen/normal_head" />

</LinearLayout>



