<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/login_background"
        android:orientation="vertical">
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/register_head"
            android:textColor="@color/black"
            android:textSize="@dimen/common_heading_size_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/login_edttxt_background"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_head"
                    android:background="@null"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/txt_color_grey"
                    android:textSize="@dimen/common_text_size_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edttxt_background"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/phoneNumber_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_head"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/txt_color_grey"
                    android:textSize="@dimen/common_text_size_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edttxt_background"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_head"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/txt_color_grey"
                    android:textSize="@dimen/common_text_size_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edttxt_background"
                android:orientation="vertical"
                android:singleLine="true">

                <EditText
                    android:id="@+id/password_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_head"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/txt_color_grey"
                    android:textSize="@dimen/common_text_size_14"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_btn"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/purple_700"
                android:padding="7dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/common_button_size_20"
                app:cornerRadius="@dimen/normal_head" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtAlreadyHavingAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/purple_700"
                android:gravity="center"
                android:text="@string/already_having_account"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/common_text_size_14" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>

