<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".Activity.LoginActivity">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center"
            android:background="@drawable/login_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_head"
                android:textColor="@color/black"
                android:textSize="@dimen/common_heading_size_20" />
            <TextView
                android:id="@+id/txtCredentialsError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:background="@color/txt_bg_red"
                android:visibility="gone"
                android:text="@string/create_account"
                android:textColor="@color/txt_red"
                android:textSize="@dimen/common_text_size_14" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/common_text_size_14"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_edttxt_background"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/username_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/normal_head"
                        android:background="@null"
                        android:hint="@string/phone_number"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/txt_color_grey"
                        android:textSize="@dimen/common_text_size_14"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_edttxt_background"
                    android:orientation="vertical"
                    android:singleLine="true">

                    <EditText
                        android:id="@+id/password_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/normal_head"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/txt_color_grey"
                        android:textSize="@dimen/common_text_size_14"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/common_text_size_14" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                android:backgroundTint="@color/purple_700"
                    android:padding="7dp"
                    android:text="@string/login_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common_button_size_20"
                    app:cornerRadius="@dimen/normal_head" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

